@@ -5,6 +5,8 @@
 * JetPay V2: Add new gateway [shasum] #2442
 * Orbital: Update test and production urls [jcowhigjr] #2436
 * Orbital: Pass soft descriptors from options hash [curiousepic]
+* JetPay V2: Add optional tax data to capture calls [shasum] #2445
+
 == Version 1.66.0 (May 4, 2017)
 * Support Rails 5.1 [jhawthorn] #2407
 * ProPay: Add Canada as supported country [davidsantoso]
